# botcharter

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.ru.md  SECURITY.md  pyproject.toml
.ai_context/: active_tasks.md  handoff.md  project_brief.md
.github/workflows/: ci.yml
docs/: BOTCTL_V0.md  DESIGN_CONTROL_SPEC.md  DOCUMENTATION_RULES.md  PUBLIC_ALPHA.md  RELEASE_CHECKLIST.md
docs/adr/: 0001-separate-control-layer-project.md  0002-specs-first-bot-management.md  0003-machine-readable-graphs.md  0004-runtime-bots-stay-independent.md  0005-design-control-before-runtime-apply.md  0006-read-only-runtime-source-audit.md  0007-portable-audit-profiles.md  0008-local-metadata-runtime-probe.md  0009-explicit-http-health-probe.md  0010-explicit-immutable-sqlite-probe.md  0011-one-command-project-adoption.md  (+3 more)
schemas/: adoption-result.schema.json  agent-context.schema.json  architecture-brief.schema.json  audit-profile.schema.json  change-plan-design.schema.json  change-plan.schema.json  design-brief.schema.json  design-gate.schema.json  design-manifest.schema.json  design-readiness.schema.json  drift-report.schema.json  graph.schema.json  http-probe.schema.json  impact-graph.schema.json  journey-map.schema.json  menu-design-diff.schema.json  menu-design-proposal.schema.json  menu-implementation-plan.schema.json  menu-map.schema.json  observed-graph.schema.json  product-model.schema.json  project.schema.json  response-system.schema.json  role-model.schema.json  runtime-audit.schema.json  runtime-probe.schema.json  sqlite-probe.schema.json  state-model.schema.json  test-matrix.schema.json  ux-rulepack.schema.json
specs/: CONTRACTS.yaml  DEPENDENCIES.yaml  EVENTS.yaml  FLOWS.yaml  STORAGE.yaml  UI_GRAPH.yaml
templates/: ADR.template.md  CONTEXT.template.md
tools/: botctl.py  demo_public_alpha.py  inspect_distribution.py  release_check.py  smoke_adopt.py  smoke_botctl_v0.py  smoke_http_probe.py  smoke_runtime_audit.py  smoke_runtime_probe.py  smoke_sqlite_probe.py
(+29 files in other folders)
