[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botcharter"
version = "0.8.0a1"
description = "Architecture control, drift audit, and safety gates for AI-built Telegram bots"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Yurii Slepnev"}]
keywords = ["telegram", "bots", "ai-agents", "spec-driven-development", "architecture", "static-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = ["PyYAML>=6.0,<7", "jsonschema>=4.20,<5"]

[project.urls]
Homepage = "https://github.com/YURII-YURII86/botcharter"
Repository = "https://github.com/YURII-YURII86/botcharter"
Issues = "https://github.com/YURII-YURII86/botcharter/issues"
Changelog = "https://github.com/YURII-YURII86/botcharter/blob/main/CHANGELOG.md"

[project.scripts]
botctl = "botctl.cli:main"

[tool.setuptools]
package-dir = {"" = "tools"}

[tool.setuptools.packages.find]
where = ["tools"]
include = ["botctl*"]

[tool.setuptools.package-data]
botctl = ["rulepacks/*.yaml"]

[tool.setuptools.data-files]
"share/botctl/schemas" = ["schemas/*.json"]
"share/botctl/specs" = ["specs/*.yaml"]
"share/botctl/profiles/synthetic-voice-assistant" = ["profiles/synthetic-voice-assistant/profile.yaml"]
"share/botctl/profiles/synthetic-voice-assistant/specs" = ["profiles/synthetic-voice-assistant/specs/*.yaml"]
"share/botctl/profiles/synthetic-media-pipeline" = ["profiles/synthetic-media-pipeline/profile.yaml"]
"share/botctl/profiles/synthetic-media-pipeline/specs" = ["profiles/synthetic-media-pipeline/specs/*.yaml"]
